--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -669,16 +669,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carat\n",
+      "Mean : 0.7906878541945415\n",
+      "Std : 0.46268773915022054\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "depth\n",
+      "Mean : 61.82057415032056\n",
+      "Std : 1.0817043574329797\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "table\n",
+      "Mean : 57.22767483068404\n",
+      "Std : 1.9188442793738754\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "x\n",
+      "Mean : 5.715312104477381\n",
+      "Std : 1.1094221570348355\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "y\n",
+      "Mean : 5.720094382997628\n",
+      "Std : 1.1023334834958547\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "z\n",
+      "Mean : 3.5342463360076035\n",
+      "Std : 0.6889221063801613\n",
+      "\n",
+      "\n",
+      "===================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in numericalColumns:\n",
+    "    print(col)\n",
+    "    print(f\"Mean : {data[col].mean()}\")\n",
+    "    print(f\"Std : {data[col].std()}\") \n",
+    "    print('\\n')\n",
+    "    print('='*35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_pipeline__carat\n",
+      "Mean : -3.4294577101800395e-17\n",
+      "Std : 1.0000036900300922\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "num_pipeline__depth\n",
+      "Mean : -3.2238475621430986e-15\n",
+      "Std : 1.0000036900300924\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "num_pipeline__table\n",
+      "Mean : -1.2750608402428555e-15\n",
+      "Std : 1.0000036900300922\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "num_pipeline__x\n",
+      "Mean : 2.1751361745912544e-16\n",
+      "Std : 1.0000036900300922\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "num_pipeline__y\n",
+      "Mean : -2.3408408590586693e-16\n",
+      "Std : 1.0000036900300922\n",
+      "\n",
+      "\n",
+      "===================================\n",
+      "num_pipeline__z\n",
+      "Mean : 2.633445966441003e-16\n",
+      "Std : 1.0000036900300924\n",
+      "\n",
+      "\n",
+      "===================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in X_train.columns[:-3]:\n",
+    "    print(col)\n",
+    "    print(f\"Mean : {X_train[col].mean(axis = 0)}\")\n",
+    "    print(f\"Std : {X_train[col].std(axis = 0)}\") \n",
+    "    print('\\n')\n",
+    "    print('='*35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'import seaborn as sns\\nimport matplotlib.pyplot as plt\\n\\nplt.figure(figsize = (4,4))\\n\\n## plot the histogram chart for the numerical columns\\nfor col in X_train.columns:\\n    sns.histplot(data = X_train , x = col, kde = True)\\n    print(\"\\n\")\\n    plt.show()'"
+       "'import seaborn as sns\\nimport matplotlib.pyplot as plt\\n\\nplt.figure(figsize = (4,4))\\n\\n## plot the histogram chart for the numerical columns\\nfor col in X_train.columns[:-3]:\\n    sns.histplot(data = X_train , x = col, kde = True)\\n    print(\"\\n\")\\n    plt.show()'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +804,7 @@
     "plt.figure(figsize = (4,4))\n",
     "\n",
     "## plot the histogram chart for the numerical columns\n",
-    "for col in X_train.columns:\n",
+    "for col in X_train.columns[:-3]:\n",
     "    sns.histplot(data = X_train , x = col, kde = True)\n",
     "    print(\"\\n\")\n",
     "    plt.show()\"\"\""
