--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,26 @@
     "logging.error(\"This is some sample error log message\")\n",
     "logging.warning(\"This is some sample warning log message\")\n",
     "logging.debug(\"This is some sample debugging log message\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\iNeuron_Code\\\\ML\\\\fsdsmendtoend\\\\notebooks'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.dirname(os.path.join(os.getcwd(),\"abc.csv\"))"
    ]
   },
   {
