Renamed the file

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "# make sure you have created te local package by adding -e . in requirements.txt \n",
     "# or run the setup.py file.\n",
-    "from src.DimondPricePrediction.logger import logging\n"
+    "from src.DiamondPricePrediction.logger import logging\n"
    ]
   },
   {
@@ -124,8 +124,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
